--- a/helloworld.html
+++ b/helloworld.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-<h1 style="background-color:blue"> Hello World</h1>
+<h1 style="background-color:grey"> Hello World</h1>
 </body>
 </html>
